package nl.han.aim.oose.dea.datasource.util;


public class SqlServerDbProperties extends DbProperties {

    public SqlServerDbProperties() {
        super("sqlserver.properties");
    }

}
